[package]
name = "template-cli"
version = "0.3.1"
edition = "2021"
authors = ["Hidde Wieringa <hidde@hiddewieringa.nl>"]
description = "CLI for templating based on JSON, YAML or HCL configuration"
license = "MIT"
keywords = ["template", "cli", "json", "yaml", "hcl"]
categories = ["command-line-utilities", "template-engine", "development-tools"]
exclude = [".github"]

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.3", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
regex = "1"
hcl-rs = "0.14"
itertools = "0.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "template"
