[package]
name = "template-cli"
version = "0.4.1"
edition = "2021"
authors = ["Hidde Wieringa <hidde@hiddewieringa.nl>"]
description = "CLI for templating based on JSON, YAML or HCL configuration"
license = "MIT"
keywords = ["template", "cli", "json", "yaml", "hcl"]
categories = ["command-line-utilities", "template-engine", "development-tools"]
exclude = [".github"]
repository = "https://github.com/hiddewie/template"

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
regex = "1"
hcl-rs = "0.16"
itertools = "0.12"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "template"
